# comot-css

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_fuzz.sh  run_fuzz_test.sh  run_unit_test.sh
examples/: CMakeLists.txt  main.c
include/: diag.h  error.h  lexer.h  tokens.h
include/comot-css/: diag.h  error.h  tokenizer.h  tokens.h
src/: CMakeLists.txt
src/tokenizer/: consume_comment_or_delim.c  consume_escaped_code_point.c  consume_ident_like_token.c  consume_ident_sequence.c  consume_numeric_token.c  consume_string.c  consume_url_token.c  reconsume_curr_code_point.c  tokenizer.c  tokenizer_impl.c
src/tokenizer/priv/: decoder.h  tokenizer_impl.h
src/utils/: decoder.c  diag.c
tests/: CMakeLists.txt
tests/fuzz/: CMakeLists.txt  cssTokenizerFuzz.c
tests/fuzz/corpus/: _edgeCases.css  invalidTokens.css  simple.css  unicode.css  weirdCss.css
tests/fuzz/crashes/: crash-4340cc945036553fa188ca2530cd4f69b7ebdbd4  crash-46eb9965fb97232d7b2234faf5af915cd8b244a7  crash-482c646ad7b106fb61553429f1db61b3b77c78af  crash-b80edae42275f415e21368d3493debd99b0e2d7b  crash-c80412b29f67b641b04d1db057f75a79a3e66c99  crash-c8f2be130f9d1978fdda429cb4c031897aee468e  leak-140a88abf4c38e5a522fa41973207ab236bcd362
tests/unit/: CMakeLists.txt  cssTokenizerUnitTests.c
